<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_home"
        android:title="@string/txt_dashboard" />
    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_shop"
        android:title="@string/txt_shop" />
    <item
        android:id="@+id/navigation_bartertrade"
        android:icon="@drawable/ic_barter_trade"
        android:title="@string/txt_barter_trade" />
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/txt_favorite" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account"
        android:title="@string/txt_profile" />

</menu>